--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
-  banner: "Your image url"
+  heading: "南城故人 浮生半梦"
+  subheading: "阿尔比恩养生局"
+  banner: "https://dogefs.s3.ladydaily.com/~/source/wallhaven/full/2y/wallhaven-2yjp6x.png?w=2560&h=1440&fmt=webp"
